--- a/MonopHelper/Pages/Index.cshtml
+++ b/MonopHelper/Pages/Index.cshtml
@@ -1,10 +1,21 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Create Game";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="card">
+    <div class="card-header text-white bg-primary">
+        @ViewData["Title"]
+    </div>
+    <div class="card-body bg-light">
+        <form method="post">
+            <label asp-for="GameName"></label>
+            <input class="form-control" type="text" asp-for="GameName"/>
+            <span class="text-danger" asp-validation-for="GameName"></span>
+            
+            <br/>
+            <input type="submit" class="btn btn-primary mt" value="Create Game"/>
+        </form>
+    </div>
 </div>
