--- a/MonopHelper/Pages/Index.cshtml
+++ b/MonopHelper/Pages/Index.cshtml
@@ -13,9 +13,22 @@
             <label asp-for="GameName"></label>
             <input class="form-control" type="text" asp-for="GameName"/>
             <span class="text-danger" asp-validation-for="GameName"></span>
+            <br/>
+            
+            <div id="GamePlayers">
+                <partial name="CreateGame/_NewGamePlayers" model="Model.NoPlayers"/>
+            </div>
+            <input type="hidden" asp-for="Players" value="" id="SetPlayers"/>
+            
+            <div class="mt mb" id="AddPlayers" hidden="@true">
+                <label>Player Name</label>
+                <input id="PlayerName" class="form-control" type="text"/>
+                <button class="btn btn-info mt mb" onclick="AddPlayer()" type="button">Add</button>
+            </div>
+            <button class="btn btn-warning mt mb" onclick="ShowAddPlayer()" type="button">Add Players</button>
             
             <br/>
-            <input type="submit" class="btn btn-primary mt" value="Create Game"/>
+            <input type="submit" class="btn btn-primary mt" value="Create Game" onclick="EnsurePlayers()"/>
         </form>
     </div>
 </div>
