--- a/MonopHelper/Pages/InGame/Index.cshtml
+++ b/MonopHelper/Pages/InGame/Index.cshtml
@@ -10,6 +10,7 @@
 @{
     if (Model.Players.Count == 0)
     {
+        <br/>
         <div class="card text-center">
             <div class="card-body bg-danger text-white">
                 <h4 class="card-title"><b>No players found for this game!</b></h4>
@@ -22,16 +23,105 @@
     }
     else
     {
-        foreach (var player in Model.Players)
+        foreach (var p in Model.Players)
         {
+            <br/>
             <div class="card mt mb text-center">
                 <div class="card-header text-white bg-primary">
-                    @player.PlayerName
+                    <h3>@p.Player.PlayerName</h3>
                 </div>
                 <div class="card-body bg-light">
-                    Player actions.....<br/>
+                    <div class="mb divider">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <span class="badge rounded-pill px-3 py-2 bg-info mt mb mr">Dice Number: @p.Player.DiceOne+@p.Player.DiceTwo</span>
+                                <button class="btn btn-sm btn-success">@(p.Player.DiceOne == 0 ? "Set" : "Change") Number</button>
+                            </div>
+                            <div class="col-sm-6">
+                                <span class="badge rounded-pill px-3 py-2 bg-warning text-dark mt mb mr">Jail Cost: @p.Player.JailCost</span>
+                                <button class="btn btn-sm btn-success">Leave Jail</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb divider">
+                        <div class="mb">
+                            <h4 style="display: inline-block" class="mr">Free Parking</h4>
+                            <button class="btn btn-sm btn-warning ml" style="display: inline-block; margin-bottom: 8px;">Hand in Property</button>
+                        </div>
+                        @{
+                            if (p.Properties.Count == 0)
+                            {
+                                <p>No properties handed in to free parking</p>
+                            }
+
+                            foreach (var prop in p.Properties)
+                            {
+                                <span class="badge rounded-pill px-4 py-2 prop-@((int)prop.Colour) mr">@prop.GetPropertyString()</span>
+                            }
+                        }
+                    </div>
+                    <div class="mb divider">
+                        <div class="mb">
+                            <h4 style="display: inline-block" class="mr">Loans</h4>
+                            <button class="btn btn-sm btn-warning ml" style="display: inline-block; margin-bottom: 8px;">New Loan</button>
+                        </div>
+                        @{
+                            if (p.Loans.Count == 0)
+                            {
+                                <p>No loans have been taken out.</p>
+                            }
+                            else
+                            {
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                    <tr class="table-dark">
+                                        <th>Loan Amount</th>
+                                        <th>Repaid Amount</th>
+                                        <th>Outstanding</th>
+                                        <th></th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    @{
+                                        foreach (var loan in p.Loans)
+                                        {
+                                            <tr class="table-@(loan.Repaid ? "success" : "light")">
+                                                <td>@loan.Amount</td>
+                                                <td>@loan.RepaidAmount</td>
+                                                <td>@loan.Outstanding()</td>
+                                                <td>
+                                                    @{
+                                                        if (loan.Repaid)
+                                                        {
+                                                            <span class="text-success"><b>Paid</b></span>
+                                                        }
+                                                        else
+                                                        {
+                                                            <button class="btn btn-sm btn-success">Repay</button>
+                                                        }
+                                                    }
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
+                                    </tbody>
+                                </table>
+                            }
+                        }
+                    </div>
                 </div>
             </div>
         }
+        
+        <br/>
+        <div class="card text-center mt-5">
+            <div class="card-body bg-danger text-white">
+                <h4 class="card-title"><b>Delete Game?</b></h4>
+                <form method="post" asp-page-handler="DeleteGame">
+                    <input type="hidden" asp-for="GameId" value="@Model.CurrentGame?.Id"/>
+                    <input type="submit" class="btn btn-warning mt mb" value="Delete"/>
+                </form>
+            </div>
+        </div>
     }
 }
