--- a/MonopHelper/Pages/Load.cshtml
+++ b/MonopHelper/Pages/Load.cshtml
@@ -4,3 +4,23 @@
 @{
     ViewData["Title"] = "Load Game";
 }
+
+<div class="card mt mb">
+    <div class="card-header bg-primary text-white">
+        Filter Games
+    </div>
+    <div class="card-body bg-light">
+        
+    </div>
+</div>
+
+<div class="card mt mb">
+    <div class="card-header bg-primary text-white">
+        Games
+    </div>
+    <div class="card-body bg-light">
+        <div id="LoadGames">
+            <partial name="CreateGame/_LoadGames" model="Model.LoadModel"/>
+        </div>
+    </div>
+</div>
