--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                         <a class="nav-link text-dark" asp-area="" asp-page="/Index">New Game</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Load Game</a>
+                        <a class="nav-link text-dark" asp-area="" asp-page="/Load">Load Game</a>
                     </li>
                 </ul>
-                <partial name="_LoginPartial"/>
+                @* <partial name="_LoginPartial"/> *@
             </div>
         </div>
     </nav>
