can add and repay loans

--- a/MonopHelper/Pages/InGame/HandInProperty.cshtml
+++ b/MonopHelper/Pages/InGame/HandInProperty.cshtml
@@ -26,7 +26,7 @@
             }
             else
             {
-                <p>All property types have been handed into free parking for @(Model.Player?.PlayerName ?? "(Unknown Player)")</p>
+                <p>All property types have been handed into free parking for @(Model.Player?.PlayerName ?? "(Unknown Player)").</p>
                 <p>
                     @(Model.Player?.PlayerName ?? "(Unknown Player)") must purge a property.
                     If there are no properties to purge, take half the cash (max 1,000) but do not claim the property in free parking.
