--- a/MonopHelper/Pages/Load.cshtml
+++ b/MonopHelper/Pages/Load.cshtml
@@ -20,7 +20,7 @@
     </div>
     <div class="card-body bg-light">
         <div id="LoadGames">
-            <partial name="CreateGame/_LoadGames" model="Model.LoadModel"/>
+            <partial name="InGame/_LoadGames" model="Model.LoadModel"/>
         </div>
     </div>
 </div>
