--- a/MonopHelper/Pages/Index.cshtml
+++ b/MonopHelper/Pages/Index.cshtml
@@ -10,25 +10,27 @@
     </div>
     <div class="card-body bg-light">
         <form method="post">
-            <label asp-for="GameName"></label>
-            <input class="form-control" type="text" asp-for="GameName"/>
-            <span class="text-danger mb mt" asp-validation-for="GameName"></span>
-            <br/>
-            
-            <div id="GamePlayers">
-                <partial name="CreateGame/_NewGamePlayers" model="Model.NoPlayers"/>
+            <div class="mb divider">
+                <label asp-for="GameName"></label>
+                <input class="form-control" type="text" asp-for="GameName"/>
+                <span class="text-danger mb mt" asp-validation-for="GameName"></span>
             </div>
-            <input type="hidden" asp-for="Players" value="" id="SetPlayers"/>
-            <span asp-validation-for="Players" class="text-danger mb mt"></span>
-            <br/>
-            
-            <div class="mt mb" id="AddPlayers" hidden="@true">
-                <label>Player Name</label>
-                <input id="PlayerName" class="form-control" type="text"/>
-                <button class="btn btn-info mt mb" onclick="AddPlayer()" type="button">Add</button>
+
+            <div class="mb divider">
+                <label><b>Players:</b></label><br/>
+                <div id="GamePlayers">
+                    <partial name="InGame/_NewGamePlayers" model="Model.NoPlayers"/>
+                </div>
+                <input type="hidden" asp-for="Players" value="" id="SetPlayers"/>
+                <span asp-validation-for="Players" class="text-danger mb mt"></span>
+
+                <div class="mt mb" id="AddPlayers">
+                    <label>Player Name</label>
+                    <input id="PlayerName" class="form-control" type="text"/>
+                    <button class="btn btn-warning mt mb" onclick="AddPlayer()" type="button">Add Player</button>
+                </div>
             </div>
-            <button class="btn btn-warning mt mb" onclick="ShowAddPlayer()" type="button">Add Players</button>
-            
+
             <br/>
             <input type="submit" class="btn btn-primary mt" value="Create Game" onclick="EnsurePlayers()"/>
         </form>
