--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -15,7 +15,13 @@
 <header>
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
         <div class="container">
-            <a class="navbar-brand" asp-area="" asp-page="/Index"><b>Monopoly Helper</b></a>
+            <a class="navbar-brand" asp-area="" asp-page="/Index">
+                <div style="display: flex">
+                    <img class="mr" src="favicon.ico" width="30px" height="30px" alt="Logo"/>
+                    <b>Monopoly Helper</b>
+                </div>
+                
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
