--- a/MonopHelper/Pages/InGame/Index.cshtml
+++ b/MonopHelper/Pages/InGame/Index.cshtml
@@ -122,7 +122,7 @@
                 <h4 class="card-title"><b>Delete Game?</b></h4>
                 <form method="post" asp-page-handler="DeleteGame">
                     <input type="hidden" asp-for="GameId" value="@Model.CurrentGame?.Id"/>
-                    <input type="submit" class="btn btn-warning mt mb" value="Delete"/>
+                    <button class="btn btn-warning mt mb" onclick="DeleteGame(this.form)" type="button">Delete</button>
                 </form>
             </div>
         </div>
