--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <div class="container">
             <a class="navbar-brand" asp-area="" asp-page="/Index">
                 <div style="display: flex">
-                    <img class="mr" src="favicon.ico" width="30px" height="30px" alt="Logo"/>
+                    <img class="mr" src="~/favicon.ico" width="30px" height="30px" alt="Logo"/>
                     <b>Monopoly Helper</b>
                 </div>
                 
