--- a/MonopHelper/wwwroot/css/site.css
+++ b/MonopHelper/wwwroot/css/site.css
@@ -56,6 +56,13 @@ h1{
   border-radius: 6px;
 }
 
+.money{
+  display: inline-block; 
+  transform: scale(1, -1);
+  translate: 0 1px;
+  margin-right: 1px;
+}
+
 .mr{
   margin-right: 10px;
 }
