added triples and render players as partials

--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -45,6 +45,11 @@
         @RenderBody()
     </main>
 </div>
+<footer class="border-top footer text-muted">
+    <div class="container">
+        v1.0.0
+    </div>
+</footer>
 
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
