--- a/MonopHelper/Pages/InGame/Index.cshtml
+++ b/MonopHelper/Pages/InGame/Index.cshtml
@@ -27,92 +27,8 @@
         foreach (var p in Model.Players)
         {
             <br/>
-            <div class="card mt mb text-center">
-                <div class="card-header text-white bg-primary">
-                    <h3>@p.Player.PlayerName</h3>
-                </div>
-                <div class="card-body bg-light">
-                    <div class="mb divider">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <span class="badge rounded-pill px-3 py-2 bg-info mt mb mr">Dice Number: @p.Player.DiceOne+@p.Player.DiceTwo</span>
-                                <button class="btn btn-sm btn-success" onclick="SetNumber('@(p.Player.Id)', '@(p.Player.PlayerName)')">@(p.Player.DiceOne == 0 ? "Set" : "Change") Number</button>
-                            </div>
-                            <div class="col-sm-6">
-                                <span class="badge rounded-pill px-3 py-2 bg-warning text-dark mt mb mr">Jail Cost: <span class="money">₩</span>@p.Player.JailCost.ToString("N0")</span>
-                                <button class="btn btn-sm btn-success" onclick="LeaveJail('@(p.Player.Id)', '@(p.Player.PlayerName)', '@(p.Player.JailCost)')">Leave Jail</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="mb divider">
-                        <div class="mb">
-                            <h4 style="display: inline-block" class="mr">Free Parking</h4>
-                            <button class="btn btn-sm btn-warning ml" style="display: inline-block; margin-bottom: 8px;" onclick="location.assign('/InGame/HandInProperty/@(p.Player.Id)')">Hand in Property</button>
-                        </div>
-                        @{
-                            if (p.Properties.Count == 0)
-                            {
-                                <p>No properties have been handed in to free parking.</p>
-                            }
-
-                            foreach (var prop in p.Properties)
-                            {
-                                <span class="badge rounded-pill px-4 py-2 prop-@((int)prop.Colour) ml mr mb">@(PropCol.GetPropertyString(prop.Colour))</span>
-                            }
-                        }
-                    </div>
-                    <div class="mb divider">
-                        <div class="mb">
-                            <h4 style="display: inline-block" class="mr">Loans</h4>
-                            <button class="btn btn-sm btn-warning ml" style="display: inline-block; margin-bottom: 8px;" onclick="location.assign('/InGame/NewLoan/@(p.Player.Id)')">New Loan</button>
-                        </div>
-                        @{
-                            if (p.Loans.Count == 0)
-                            {
-                                <p>No loans have been taken out.</p>
-                            }
-                            else
-                            {
-                                <table class="table table-striped table-hover">
-                                    <thead>
-                                    <tr class="table-dark">
-                                        <th>Loan Amount</th>
-                                        <th>Repaid Amount</th>
-                                        <th>Outstanding</th>
-                                        <th>
-                                            <button class="btn rounded-pill btn-sm btn-warning" onclick="location.assign('/InGame/RepayLoan/@(p.Player.Id)?all=true')">Repay All</button>
-                                        </th>
-                                    </tr>
-                                    </thead>
-                                    <tbody>
-                                    @{
-                                        foreach (var loan in p.Loans)
-                                        {
-                                            <tr class="table-@(loan.Repaid ? "success" : "light")">
-                                                <td><span class="money">₩</span>@loan.Amount.ToString("N0")</td>
-                                                <td><span class="money">₩</span>@loan.RepaidAmount.ToString("N0")</td>
-                                                <td><span class="money">₩</span>@loan.Outstanding().ToString("N0")</td>
-                                                <td>
-                                                    @{
-                                                        if (loan.Repaid)
-                                                        {
-                                                            <span class="text-success"><b>Paid</b></span>
-                                                        }
-                                                        else
-                                                        {
-                                                            <button class="btn btn-sm btn-success" onclick="location.assign('/InGame/RepayLoan/@(loan.Id)?all=false')">Repay</button>
-                                                        }
-                                                    }
-                                                </td>
-                                            </tr>
-                                        }
-                                    }
-                                    </tbody>
-                                </table>
-                            }
-                        }
-                    </div>
-                </div>
+            <div id="@(p.Player.Id)_Partial">
+                <partial name="InGame/_PlayerPartial" model="p"/>
             </div>
         }
         
