--- a/MonopHelper/Pages/Index.cshtml
+++ b/MonopHelper/Pages/Index.cshtml
@@ -1,38 +1,42 @@
 ﻿@page
+@using Version = MonopHelper.Services.Version
 @model IndexModel
 @{
-    ViewData["Title"] = "Create Game";
+    ViewData["Title"] = "Home";
 }
 
 <div class="card">
     <div class="card-header text-white bg-primary">
-        @ViewData["Title"]
+        Monopoly Helper - @V.GetVersion()
     </div>
     <div class="card-body bg-light">
-        <form method="post">
-            <div class="mb divider">
-                <label asp-for="GameName"></label>
-                <input class="form-control" type="text" asp-for="GameName"/>
-                <span class="text-danger mb mt" asp-validation-for="GameName"></span>
+        <div class="mb divider">
+            <h4>Create Standard Game</h4>
+            <p>
+                Create a new standard game that acts as an aid to the real game.
+                <br/>
+                This type of game can store and track player's dice numbers, jail cost, triples, free parking properties, and loans.
+            </p>
+            <button class="btn btn-info text-white mt mb" onclick="location.assign('/Create')">New Standard Game</button>
+        </div>
+        <div class="mb divider">
+            <h4>Manage Game Cards</h4>
+            <p>
+                Upload new chance, community chest, and jeopardy cards.
+            </p>
+            <div style="display: inline">
+                <button class="btn btn-info text-white mt mb mr" onclick="location.assign('/Cards/Index')">Play Cards</button>
+                <button class="btn btn-warning mt mb" onclick="location.assign('/Cards/Manage')">Manage Cards</button>
             </div>
-
-            <div class="mb divider">
-                <label><b>Players:</b></label><br/>
-                <div id="GamePlayers">
-                    <partial name="InGame/_NewGamePlayers" model="Model.NoPlayers"/>
-                </div>
-                <input type="hidden" asp-for="Players" value="" id="SetPlayers"/>
-                <span asp-validation-for="Players" class="text-danger mb mt"></span>
-
-                <div class="mt mb" id="AddPlayers">
-                    <label>Player Name</label>
-                    <input id="PlayerName" class="form-control" type="text"/>
-                    <button class="btn btn-warning mt mb" onclick="AddPlayer()" type="button">Add Player</button>
-                </div>
+        </div>
+        <div class="mb divider">
+            <h4>Software Versions</h4>
+            <p>
+                View version history and patch notes.
+            </p>
+            <div style="display: inline">
+                <button class="btn btn-info text-white mt mb mr" onclick="location.assign('/Version')">View Versions</button>
             </div>
-
-            <br/>
-            <input type="submit" class="btn btn-primary mt" value="Create Game" onclick="EnsurePlayers()"/>
-        </form>
+        </div>
     </div>
 </div>
