--- a/MonopHelper/Pages/_ViewImports.cshtml
+++ b/MonopHelper/Pages/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using MonopHelper
 @using MonopHelper.Data
+@inject MonopHelper.Services.Version V
 @namespace MonopHelper.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
