require login to app

--- a/MonopHelper/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/MonopHelper/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,6 @@
-@inject SignInManager<IdentityUser> SignInManager
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using MonopHelper.Authentication
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
