--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
-﻿@using Version = MonopHelper.Services.Version
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
@@ -54,7 +53,7 @@
                         </a>
                     </li>
                 </ul>
-                @* <partial name="_LoginPartial"/> *@
+                <partial name="_LoginPartial"/>
             </div>
         </div>
     </nav>
