--- a/MonopHelper/Pages/Shared/_LoginPartial.cshtml
+++ b/MonopHelper/Pages/Shared/_LoginPartial.cshtml
@@ -2,10 +2,17 @@
 @using MonopHelper.Authentication
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
+@inject UserInfo UserInfo
 
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
+        @if (UserInfo.ClaimsPrincipal.IsInRole("Admin"))
+        {
+            <li class="nav-item">
+                <a class="nav-link text-dark" asp-area="Admin" asp-page="/Index" title="Admin Centre">Admin Centre</a>
+            </li>
+        }
         <li class="nav-item">
             <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
         </li>
