--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -10,7 +10,7 @@
         @ViewData["Title"]
     </div>
     <div class="card-body bg-light">
-        <h4>Version: 1.0</h4>
+        <h4>Version: 1.0.0</h4>
         <div class="list mb">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -37,7 +37,7 @@
             </ul>
         </div>
 
-        <h4>Version: 1.1</h4>
+        <h4>Version: 1.0.1</h4>
         <div class="list mb">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -49,7 +49,7 @@
             </ul>
         </div>
 
-        <h4>Version: 1.2</h4>
+        <h4>Version: 1.0.2</h4>
         <div class="list mb">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">
@@ -66,6 +66,24 @@
                 </li>
                 <li class="list-group-item">
                     Different card decks based on difficulty.
+                </li>
+            </ul>
+        </div>
+
+        <h4>Version: 1.1.2</h4>
+        <div class="list mb">
+            <ul class="list-group list-group-flush">
+                <li class="list-group-item">
+                    Add users and tenants.
+                </li>
+                <li class="list-group-item">
+                    All pages, except ASP.NET identity pages, require authentication.
+                </li>
+                <li class="list-group-item">
+                    Games are now based on users.
+                </li>
+                <li class="list-group-item">
+                    Card decks and types are now based on tenant.
                 </li>
             </ul>
         </div>
