--- a/MonopHelper/Pages/Shared/_Layout.cshtml
+++ b/MonopHelper/Pages/Shared/_Layout.cshtml
@@ -72,9 +72,11 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/js/admin.js" asp-append-version="true"></script>
 <script src="~/js/Cards/Cards.js" asp-append-version="true"></script>
 <script src="~/js/sweetalert2.min.js" asp-append-version="true"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://kit.fontawesome.com/29bf1169ee.js" crossorigin="anonymous"></script>
 
 @await RenderSectionAsync("Scripts", required: false)
 </body>
