--- a/MonopHelper/wwwroot/css/site.css
+++ b/MonopHelper/wwwroot/css/site.css
@@ -61,6 +61,13 @@ h1{
   border-radius: 6px;
 }
 
+.h-line{
+  height: 2px;
+  margin: 5px;
+  border: 1px #ddd ridge;
+  border-radius: 2px;
+}
+
 .list{
   padding: 0 10px;
 }
